# Computer-Vision

./: CMakeLists.txt  README.md
Masks/: im09_bb.txt  im10_bb.txt  im11_bb.txt  im12_bb.txt  im13_bb.txt  im14_bb.txt  im15_bb.txt  im1_bb.txt  im2_bb.txt  im3_bb.txt  im4_bb.txt  im5_bb.txt  im6_bb.txt  im7_bb.txt  im8_bb.txt
include/: BoundingBox.h  ColorFeaturesSegmentator.h  Player.h  detection.h  detection_segmentation.h  performance_measurement.h  utils.h
performance_measurements/: map.txt  miou.txt
python/: YOLO_inference.ipynb  YOLO_train_yolov8_instance_segmentation.ipynb
runs/Contours + HOG + SVM/BBoxes/: im09_bb.txt  im11_bb.txt  im12_bb.txt  im13_bb.txt  im14_bb.txt  im15_bb.txt  im1_bb.txt  im2_bb.txt  im7_bb.txt  im8_bb.txt
runs/HOG + SVM/BBoxes/: im09_bb.txt  im10_bb.txt  im11_bb.txt  im12_bb.txt  im13_bb.txt  im14_bb.txt  im15_bb.txt  im1_bb.txt  im2_bb.txt  im3_bb.txt  im4_bb.txt  im5_bb.txt  im6_bb.txt  im7_bb.txt  im8_bb.txt
runs/Haar Cascade/BBoxes/: im09_bb.txt  im10_bb.txt  im11_bb.txt  im12_bb.txt  im13_bb.txt  im14_bb.txt  im15_bb.txt  im1_bb.txt  im2_bb.txt  im3_bb.txt  im5_bb.txt  im6_bb.txt  im7_bb.txt  im8_bb.txt
source/: BoundingBox.cpp  ColorFeaturesSegmentator.cpp  Player.cpp  detection.cpp  detection_segmentation.cpp  main.cpp  mainDetectionOpenCV.cpp  performance_measurement.cpp  utils.cpp
